# AlgoTradeCompanion

./: .env.example  .replit  README.md  package-lock.json  package.json  pyproject.toml
client/src/: App.tsx  index.css
client/src/components/: market-data-widget.tsx
client/src/components/advanced-orders/: advanced-orders.tsx
client/src/components/alerts/: alerts-center.tsx
client/src/components/analytics/: analytics-dashboard.tsx
client/src/components/backtesting/: backtest-form.tsx  backtest-results.tsx
client/src/components/dashboard/: metrics-grid.tsx  performance-chart.tsx  recent-activity.tsx  strategies-sidebar.tsx
client/src/components/layout/: app-layout.tsx  navigation.tsx
client/src/components/risk-management/: risk-dashboard.tsx
client/src/components/strategies/: strategy-card.tsx  strategy-form.tsx
client/src/hooks/: use-auth.tsx
client/src/lib/: auth.ts  trading-data.ts
client/src/pages/: analytics.tsx  backtesting.tsx  dashboard.tsx  live-trading.tsx  login.tsx  register.tsx  strategies.tsx
client/src/pages/advanced/: strategy-templates.tsx
server/: routes.ts  storage.ts
server/services/: advanced-orders.ts  alerts.ts  angel_one_api.py  angel_one_service.py  auth.ts  backtesting.ts  market-data.ts  ml-analytics.ts  risk-management.ts  strategy-templates.ts  trading.ts
shared/: schema.ts
