[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "logzero>=1.7.0",
    "pycryptodome>=3.23.0",
    "pyotp>=2.9.0",
    "requests>=2.32.3",
    "smartapi-python>=1.5.5",
    "websocket-client>=1.8.0",
]
